@@ -1,5 +1,9 @@
 WIP
 -----------------------------
+* [New]Widget Snapping
+  - Add widget snapping (implemented by "nikidigi"), which allows to snap and align widget to other widgets or screen edges. Snapping is activated by holding down "Ctrl" key while moving widget.
+  - Add "snap_distance" and "snap_gap" options in global user config, which can be accessed from "Config > Application" in main menu.
+
 * Standings Widget
   - Renamed "show_time_gap_from_class_best" option to "show_time_gap_from_same_class", which now also shows time gap behind the same class leader in race session. This option is enabled by default, and only takes effect while `enable_multi_class_split_mode` is enabled.
 
@@ -8,6 +12,9 @@ WIP
 
 * Stats Module
   - Fixed an issue that would cause incorrect best lap time saved due to network desync.
+
+* Misc
+  - Add new contributor "nikidigi" to contributors.md.
 
 2.31.0 (2025-07-08)
 -----------------------------
